--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [current_user, @item] do |f| %>
+<%= form_for [user, item] do |f| %>
   <div class="field form-group">
     <%= f.label :name, class: "control-label" %><br>
     <%= f.text_field :name, class: "form-control", placeholder: "What do you need to do?" %>
@@ -6,4 +6,4 @@
   <div class="pull-right">
     <%= f.submit "Add ToDo", class:"btn btn-success addItemBtn" %>
   </div>
-<% end %>
+<% end %> 
