--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,11 @@
         <div class="card-block">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
+            
+            <div class="field form-group">
+              <%= f.label :username %><br />
+              <%= f.text_field :username, autofocus: true, class: "form-control" %>
+            </div>
 
             <div class="field form-group">
               <%= f.label :email %><br />
