--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -128,6 +128,43 @@
     left:0;
  }
  
+//  HELP MODAL STYLES
+
+.help-modal .modal-content {
+        border-radius: 0rem;
+}
+.help-modal .modal-content .close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: +100;
+    background-color: indianred;
+    padding: 5px 10px;
+    opacity: .9;
+    color: #fff;
+    transition: .3s ease;
+    
+}
+.help-modal .modal-content .close:hover {
+opacity: 1;
+background-color: $danger;
+    
+}
+.help-modal .modal-body i {
+        font-size: 5.5rem;
+        color: $success;
+        text-align: center;
+}
+.help-modal .modal-body h2 {
+    font-size:2.2rem;
+    margin-top:0;
+}
+.help-modal .modal-body p {
+    font-size:1.2rem;
+    margin-top:0;
+}
+ 
+ 
  .todayBox, .tomorrowBox, .upcomingBox {
      padding: 20px 5px;
     //  background-color: #fff;
