--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -7,7 +7,7 @@
         <div class="col-sm-12">
           <div class="row">
             <div class="col-lg-8 col-sm-12">
-              <h3 class="text-primary"><i class="fa fa-user"></i>&nbsp; My Tasks | <%= @user.username.downcase %></h3>
+              <h3 class="text-primary"><i class="fa fa-user"></i>&nbsp; My Tasks | <%= @user.email.downcase %></h3>
             </div>
           </div>
           
